// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppPlayer should render 1`] = `
<div
  className="ui container"
>
  Generating playlist. Depending on input size and desired playlist length, this might take a while.
  <div
    className="ui bottom aligned grid"
  >
    <div
      className="right aligned ten wide computer sixteen wide mobile column"
    >
      <h2>
        test AppPlayer
      </h2>
    </div>
    <div
      className="center aligned five wide computer sixteen wide mobile column"
    >
      <span>
        Playlist duration: 
        120
         seconds
      </span>
      <br />
      <span>
        Tried to generate 
        120
         seconds
      </span>
      <br />
      <strong>
        Great success! Playlist is exactly as long as you wanted!
        <span
          aria-label="Success"
          role="img"
        >
          👌
        </span>
        <span
          aria-label="Success"
          role="img"
        >
          🤘
        </span>
        <br />
      </strong>
      <span>
        Queue duration: 
        120
         seconds
      </span>
      <br />
      <span>
        Playlist size: 
        2
         songs
      </span>
      <br />
      <span>
        Queue size: 
        2
         songs
      </span>
      <br />
      <span>
        Playlist rating: 
        1
        /5
      </span>
      <br />
      <span
        className="ratings-container"
      >
        <div
          className="ui star disabled rating"
          onMouseLeave={[Function]}
          role="radiogroup"
          tabIndex={0}
        >
          <i
            aria-checked={true}
            aria-posinset={1}
            aria-setsize={5}
            className="active icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={2}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={3}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={4}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={5}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
        </div>
      </span>
    </div>
  </div>
  <div
    className="ui grid"
  >
    <div
      className="right aligned ten wide computer sixteen wide mobile column"
    >
      <div
        className=""
      >
        <div
          className={null}
          id={null}
        />
      </div>
    </div>
    <div
      className="five wide computer sixteen wide mobile column"
    >
      <div
        className="playlist"
      >
        <div
          className="ui items"
        >
          <a
            className="item"
            onClick={[Function]}
          >
            <div
              className="image"
            >
              <img
                src="https://i.ytimg.com/vi/1/hqdefault.jpg"
              />
            </div>
            <div
              className="content"
            >
              <div
                className="header"
              >
                test AppPlayer
              </div>
              <div
                className="meta"
              >
                1 minute
                 
                
                <br />
                <span
                  className="ratings-container"
                >
                  <div
                    className="ui star disabled rating"
                    onMouseLeave={[Function]}
                    role="radiogroup"
                    tabIndex={0}
                  >
                    <i
                      aria-checked={true}
                      aria-posinset={1}
                      aria-setsize={5}
                      className="active icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={2}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={3}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={4}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={5}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                  </div>
                </span>
              </div>
            </div>
          </a>
          <a
            className="item"
            onClick={[Function]}
          >
            <div
              className="image"
            >
              <img
                src="https://i.ytimg.com/vi/2/hqdefault.jpg"
              />
            </div>
            <div
              className="content"
            >
              <div
                className="header"
              >
                test2 AppPlayer
              </div>
              <div
                className="meta"
              >
                1 minute
                 
                
                <br />
                <span
                  className="ratings-container"
                >
                  <div
                    className="ui star disabled rating"
                    onMouseLeave={[Function]}
                    role="radiogroup"
                    tabIndex={0}
                  >
                    <i
                      aria-checked={true}
                      aria-posinset={1}
                      aria-setsize={5}
                      className="active icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={2}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={3}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={4}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={5}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                  </div>
                </span>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppPlayer should render select dataset message 1`] = `
<div
  className="ui container"
>
  Select dataset size and desired playlist length
  Generating playlist. Depending on input size and desired playlist length, this might take a while.
</div>
`;

exports[`AppPlayer should render select dataset message even when genration is false 1`] = `
<div
  className="ui container"
/>
`;

exports[`AppPlayer should render with creating false 1`] = `
<div
  className="ui container"
>
  <div
    className="ui bottom aligned grid"
  >
    <div
      className="right aligned ten wide computer sixteen wide mobile column"
    >
      <h2>
        test AppPlayer
      </h2>
    </div>
    <div
      className="center aligned five wide computer sixteen wide mobile column"
    >
      <span>
        Playlist duration: 
        120
         seconds
      </span>
      <br />
      <span>
        Tried to generate 
        120
         seconds
      </span>
      <br />
      <strong>
        Great success! Playlist is exactly as long as you wanted!
        <span
          aria-label="Success"
          role="img"
        >
          👌
        </span>
        <span
          aria-label="Success"
          role="img"
        >
          🤘
        </span>
        <br />
      </strong>
      <span>
        Queue duration: 
        60
         seconds
      </span>
      <br />
      <span>
        Playlist size: 
        2
         songs
      </span>
      <br />
      <span>
        Queue size: 
        1
         songs
      </span>
      <br />
      <span>
        Playlist rating: 
        1
        /5
      </span>
      <br />
      <span
        className="ratings-container"
      >
        <div
          className="ui star disabled rating"
          onMouseLeave={[Function]}
          role="radiogroup"
          tabIndex={0}
        >
          <i
            aria-checked={true}
            aria-posinset={1}
            aria-setsize={5}
            className="active icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={2}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={3}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={4}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={5}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
        </div>
      </span>
    </div>
  </div>
  <div
    className="ui grid"
  >
    <div
      className="right aligned ten wide computer sixteen wide mobile column"
    >
      <div
        className=""
      >
        <div
          className={null}
          id={null}
        />
      </div>
    </div>
    <div
      className="five wide computer sixteen wide mobile column"
    >
      <div
        className="playlist"
      >
        <div
          className="ui items"
        >
          <a
            className="item"
            onClick={[Function]}
          >
            <div
              className="image"
            >
              <img
                src="https://i.ytimg.com/vi/2/hqdefault.jpg"
              />
            </div>
            <div
              className="content"
            >
              <div
                className="header"
              >
                test2 AppPlayer
              </div>
              <div
                className="meta"
              >
                1 minute
                 
                
                <br />
                <span
                  className="ratings-container"
                >
                  <div
                    className="ui star disabled rating"
                    onMouseLeave={[Function]}
                    role="radiogroup"
                    tabIndex={0}
                  >
                    <i
                      aria-checked={true}
                      aria-posinset={1}
                      aria-setsize={5}
                      className="active icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={2}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={3}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={4}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={5}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                  </div>
                </span>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppPlayer should render with generation tried and creating false 1`] = `
<div
  className="ui container"
>
  <div
    className="ui bottom aligned grid"
  >
    <div
      className="right aligned ten wide computer sixteen wide mobile column"
    >
      <h2>
        test AppPlayer
      </h2>
    </div>
    <div
      className="center aligned five wide computer sixteen wide mobile column"
    >
      <span>
        Playlist duration: 
        120
         seconds
      </span>
      <br />
      <span>
        Tried to generate 
        120
         seconds
      </span>
      <br />
      <strong>
        Great success! Playlist is exactly as long as you wanted!
        <span
          aria-label="Success"
          role="img"
        >
          👌
        </span>
        <span
          aria-label="Success"
          role="img"
        >
          🤘
        </span>
        <br />
      </strong>
      <span>
        Queue duration: 
        120
         seconds
      </span>
      <br />
      <span>
        Playlist size: 
        2
         songs
      </span>
      <br />
      <span>
        Queue size: 
        2
         songs
      </span>
      <br />
      <span>
        Playlist rating: 
        1
        /5
      </span>
      <br />
      <span
        className="ratings-container"
      >
        <div
          className="ui star disabled rating"
          onMouseLeave={[Function]}
          role="radiogroup"
          tabIndex={0}
        >
          <i
            aria-checked={true}
            aria-posinset={1}
            aria-setsize={5}
            className="active icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={2}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={3}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={4}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={5}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
        </div>
      </span>
    </div>
  </div>
  <div
    className="ui grid"
  >
    <div
      className="right aligned ten wide computer sixteen wide mobile column"
    >
      <div
        className=""
      >
        <div
          className={null}
          id={null}
        />
      </div>
    </div>
    <div
      className="five wide computer sixteen wide mobile column"
    >
      <div
        className="playlist"
      >
        <div
          className="ui items"
        >
          <a
            className="item"
            onClick={[Function]}
          >
            <div
              className="image"
            >
              <img
                src="https://i.ytimg.com/vi/1/hqdefault.jpg"
              />
            </div>
            <div
              className="content"
            >
              <div
                className="header"
              >
                test AppPlayer
              </div>
              <div
                className="meta"
              >
                1 minute
                 
                
                <br />
                <span
                  className="ratings-container"
                >
                  <div
                    className="ui star disabled rating"
                    onMouseLeave={[Function]}
                    role="radiogroup"
                    tabIndex={0}
                  >
                    <i
                      aria-checked={true}
                      aria-posinset={1}
                      aria-setsize={5}
                      className="active icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={2}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={3}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={4}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={5}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                  </div>
                </span>
              </div>
            </div>
          </a>
          <a
            className="item"
            onClick={[Function]}
          >
            <div
              className="image"
            >
              <img
                src="https://i.ytimg.com/vi/2/hqdefault.jpg"
              />
            </div>
            <div
              className="content"
            >
              <div
                className="header"
              >
                test2 AppPlayer
              </div>
              <div
                className="meta"
              >
                1 minute
                 
                
                <br />
                <span
                  className="ratings-container"
                >
                  <div
                    className="ui star disabled rating"
                    onMouseLeave={[Function]}
                    role="radiogroup"
                    tabIndex={0}
                  >
                    <i
                      aria-checked={true}
                      aria-posinset={1}
                      aria-setsize={5}
                      className="active icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={2}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={3}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={4}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={5}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                  </div>
                </span>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppPlayer should render with generation tried false 1`] = `
<div
  className="ui container"
>
  Generating playlist. Depending on input size and desired playlist length, this might take a while.
  <div
    className="ui bottom aligned grid"
  >
    <div
      className="right aligned ten wide computer sixteen wide mobile column"
    >
      <h2>
        test AppPlayer
      </h2>
    </div>
    <div
      className="center aligned five wide computer sixteen wide mobile column"
    >
      <span>
        Playlist duration: 
        120
         seconds
      </span>
      <br />
      <span>
        Tried to generate 
        120
         seconds
      </span>
      <br />
      <strong>
        Great success! Playlist is exactly as long as you wanted!
        <span
          aria-label="Success"
          role="img"
        >
          👌
        </span>
        <span
          aria-label="Success"
          role="img"
        >
          🤘
        </span>
        <br />
      </strong>
      <span>
        Queue duration: 
        120
         seconds
      </span>
      <br />
      <span>
        Playlist size: 
        2
         songs
      </span>
      <br />
      <span>
        Queue size: 
        2
         songs
      </span>
      <br />
      <span>
        Playlist rating: 
        1
        /5
      </span>
      <br />
      <span
        className="ratings-container"
      >
        <div
          className="ui star disabled rating"
          onMouseLeave={[Function]}
          role="radiogroup"
          tabIndex={0}
        >
          <i
            aria-checked={true}
            aria-posinset={1}
            aria-setsize={5}
            className="active icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={2}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={3}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={4}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={5}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
        </div>
      </span>
    </div>
  </div>
  <div
    className="ui grid"
  >
    <div
      className="right aligned ten wide computer sixteen wide mobile column"
    >
      <div
        className=""
      >
        <div
          className={null}
          id={null}
        />
      </div>
    </div>
    <div
      className="five wide computer sixteen wide mobile column"
    >
      <div
        className="playlist"
      >
        <div
          className="ui items"
        >
          <a
            className="item"
            onClick={[Function]}
          >
            <div
              className="image"
            >
              <img
                src="https://i.ytimg.com/vi/1/hqdefault.jpg"
              />
            </div>
            <div
              className="content"
            >
              <div
                className="header"
              >
                test AppPlayer
              </div>
              <div
                className="meta"
              >
                1 minute
                 
                
                <br />
                <span
                  className="ratings-container"
                >
                  <div
                    className="ui star disabled rating"
                    onMouseLeave={[Function]}
                    role="radiogroup"
                    tabIndex={0}
                  >
                    <i
                      aria-checked={true}
                      aria-posinset={1}
                      aria-setsize={5}
                      className="active icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={2}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={3}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={4}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={5}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                  </div>
                </span>
              </div>
            </div>
          </a>
          <a
            className="item"
            onClick={[Function]}
          >
            <div
              className="image"
            >
              <img
                src="https://i.ytimg.com/vi/2/hqdefault.jpg"
              />
            </div>
            <div
              className="content"
            >
              <div
                className="header"
              >
                test2 AppPlayer
              </div>
              <div
                className="meta"
              >
                1 minute
                 
                
                <br />
                <span
                  className="ratings-container"
                >
                  <div
                    className="ui star disabled rating"
                    onMouseLeave={[Function]}
                    role="radiogroup"
                    tabIndex={0}
                  >
                    <i
                      aria-checked={true}
                      aria-posinset={1}
                      aria-setsize={5}
                      className="active icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={2}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={3}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={4}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                    <i
                      aria-checked={false}
                      aria-posinset={5}
                      aria-setsize={5}
                      className="icon"
                      onClick={[Function]}
                      onKeyUp={[Function]}
                      onMouseEnter={[Function]}
                      role="radio"
                      tabIndex={-1}
                    />
                  </div>
                </span>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
